Fix a layout issue with the header logo (due to delay in loading Dancing-Script font). And extract the initFontLoading() JS logic into utils.js file

--- a/css/custom.css
+++ b/css/custom.css
@@ -365,10 +365,16 @@ html {
 }
 
 .logo {
+  opacity: 0;
   font-family: var(--font-family-signature);
   font-size: 1.5rem;
   color: var(--h2-color);
   text-decoration: none;
+  transition: opacity 0.3s ease;
+}
+
+.loaded .logo {
+  opacity: 1;
 }
 
 @media (max-width: 768px) {
